--- a/src/app/modules/receita/components/ingredientes/ingredientes.component.html
+++ b/src/app/modules/receita/components/ingredientes/ingredientes.component.html
@@ -24,15 +24,23 @@
 </div>
 
 <div class="opacity-background rounded-1 p-3 mt-2">
-    <app-ingredientes-card *ngIf="viewTipo == 0" [ingredientes]="ingredientes" (emitOpcao)="onOpcaoSelected($event)">
-    </app-ingredientes-card>
-    <app-ingredientes-tabela *ngIf="viewTipo == 1" [ingredientes]="ingredientes"></app-ingredientes-tabela>
+    <ng-container *ngIf="ingredientes.length > 0; else listaVaziaTemplate">
+        <app-ingredientes-card *ngIf="viewTipo == 0" [ingredientes]="ingredientes"
+            (emitOpcao)="onOpcaoSelected($event)">
+        </app-ingredientes-card>
+        <app-ingredientes-tabela *ngIf="viewTipo == 1" [ingredientes]="ingredientes"></app-ingredientes-tabela>
 
-    <div class="d-flex justify-content-center w-100">
-        <app-paginator [pagina]="pagina" [quantidade]="quantidade" [paginas]="paginas"
-            (paginaEvent)="onPaginaChange($event)" (quantidadeEvent)="onQuantidadeChange($event)">
-        </app-paginator>
-    </div>
+        <div class="d-flex justify-content-center w-100">
+            <app-paginator [pagina]="pagina" [quantidade]="quantidade" [paginas]="paginas"
+                (paginaEvent)="onPaginaChange($event)" (quantidadeEvent)="onQuantidadeChange($event)">
+            </app-paginator>
+        </div>
+    </ng-container>
+    <ng-template #listaVaziaTemplate>
+        <div class="text-center">
+            <strong>{{ "nenhumIngredienteEncontrado" | translate }}</strong>
+        </div>
+    </ng-template>
 </div>
 
 <mat-progress-spinner *ngIf="loading" class="spinner" [mode]="'indeterminate'"></mat-progress-spinner>
