--- a/src/app/modules/receita/components/ingredientes-card/ingredientes-card.component.html
+++ b/src/app/modules/receita/components/ingredientes-card/ingredientes-card.component.html
@@ -20,11 +20,11 @@
           {{ ingrediente.descricao }}
         </small>
         <hr>
-        <div class="d-flex flex-row-reverse">
-          <button mat-raised-button (click)="selecionarOpcao(0)" class="pink-button table-button ms-2">
+        <div class="d-flex flex-wrap gap-1">
+          <button mat-raised-button (click)="selecionarOpcao(0)" class="pink-button table-button flex-grow-1">
             <mat-icon>delete</mat-icon> {{ 'remover' | translate }}
           </button>
-          <button mat-raised-button (click)="selecionarOpcao(1)" class="blue-button table-button ms-2">
+          <button mat-raised-button (click)="selecionarOpcao(1)" class="blue-button table-button flex-grow-1">
             <mat-icon>edit</mat-icon> {{ 'editar' | translate }}
           </button>
         </div>
