--- a/src/app/modules/receita/components/receita-card/receita-card.component.html
+++ b/src/app/modules/receita/components/receita-card/receita-card.component.html
@@ -42,14 +42,14 @@
           </div>
         </div>
         <hr>
-        <div class="d-flex flex-row-reverse">
-          <button mat-raised-button class="pink-button table-button ms-2" (click)="selecionarOpcao(0)">
+        <div class="d-flex flex-wrap gap-1">
+          <button mat-raised-button class="pink-button table-button flex-grow-1" (click)="selecionarOpcao(0)">
             <mat-icon>delete</mat-icon> {{ 'remover' | translate }}
           </button>
-          <button mat-raised-button class="blue-button table-button ms-2" (click)="selecionarOpcao(1)">
+          <button mat-raised-button class="blue-button table-button flex-grow-1" (click)="selecionarOpcao(1)">
             <mat-icon>edit</mat-icon> {{ 'editar' | translate }}
           </button>
-          <button mat-stroked-button class="light-button table-button ms-2" (click)="selecionarOpcao(2)">
+          <button mat-stroked-button class="light-button table-button flex-grow-1" (click)="selecionarOpcao(2)">
             <mat-icon>search</mat-icon> {{ 'detalhes' | translate }}
           </button>
         </div>
